--- a/package.json
+++ b/package.json
@@ -1,15 +1,4 @@
 {
-  "name": "vision-verse",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "prod": "next start",
-    "lint": "next lint",
-    "start": "next build && next start",
-    "test": "jest"
-  },
   "dependencies": {
     "next": "13.5.4",
     "react": "^18",
@@ -23,8 +12,22 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "jest": "^29.7.0",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5"
-  }
+  },
+  "name": "vision-verse",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "format": "prettier --write . ",
+    "format:check": "prettier --check .",
+    "lint": "next lint",
+    "prod": "next start",
+    "start": "next build && next start",
+    "test": "jest"
+  },
+  "version": "0.1.0"
 }
