--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "automerge": true,
   "automergeType": "pr",
+  "baseBranches": ["develop", "main", "****"],
   "branchConcurrentLimit": 0,
   "branchPrefix": "renovate/",
   "commitMessagePrefix": "[Renovate] ",
