chore: update uses yarn 3 to 4

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -18,10 +18,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: GitHub Action for Yarn
-        uses: Borales/actions-yarn@v3.0.0
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          persist-credentials: false
+          node-version: '16.14.0'
+
+      - name: GitHub Action for Yarn
+        uses: Borales/actions-yarn@v4.2.0
+        with:
+          cmd: install # yarnコマンドを指定しています
 
       - id: prettier-check
         run: yarn format:check
