--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react-dom": "^18.2.13",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -24,7 +26,9 @@
     "dev": "next dev",
     "format": "prettier --write . ",
     "format:check": "prettier --check .",
+    "husky": "npx husky-init",
     "lint": "next lint",
+    "prepare": "husky install",
     "prod": "next start",
     "start": "next build && next start",
     "test": "jest"
